# TBlib

./: CMakeLists.txt  README.md  main.cpp
include/tbl/: core.hpp  ops.hpp  params.hpp  poly.hpp  tools.hpp
include/tbl/helper/: euclidean.hpp  primer.hpp  primer_select.hpp  primitive_root_select.hpp
include/tbl/layer3/: rlwe_demo.hpp
include/tbl/prng/: knuth_yao.hpp  randomInteger_mt19937.hpp  sample.hpp
lib/: params.cpp  primer.cpp
utils/: bench.cpp  bench.h
